Bookmark, State Religion Triggers, Constitutions

--- a/localisation/bookmarks_l_english.yml
+++ b/localisation/bookmarks_l_english.yml
@@ -1,5 +1,7 @@
 ﻿l_english:
  BM_HISTORY_TITLE:0 "Brief History"
- GATHERING_STORM_NAME:0 "The Dark Continent"
- GATHERING_STORM_DESC:0 ""
+ SOUDAN_1857:0 "Empires of the Soudan"
+ SOUDAN_1857_DESC:0 ""
+ CALIPHATE_1857:0 "The Indebted Caliphate"
+ CALIPHATE_1857_DESC:0 ""
  OTHER_GATHERING_STORM_DESC:0 ""
