--- a/localisation/laws_l_english.yml
+++ b/localisation/laws_l_english.yml
@@ -73,6 +73,9 @@
    law_country_religion_cult_of_personality:0 "Cult of Personality"
    law_country_religion_cult_of_personality_desc:0 ""
    law_country_religion_cult_of_personality_trigger_tt:0 " Majority Religion is §YCult of Personality§!"
+   law_country_religion_vodun:0 "Vodun"
+   law_country_religion_vodun_desc:0 ""
+   law_country_religion_vodun_trigger_tt:0 " Majority Religion is §YVodun§!"
    law_country_religion_atheist:0 "Atheist"
    law_country_religion_atheist_desc:0 ""
    law_country_religion_atheist_trigger_tt:0 " Majority Religion is §YAtheist§!"
@@ -150,7 +153,23 @@
    law_country_military_line_desc:0 ""
    law_country_military_modern:0 "Modern Army"
    law_country_military_modern_desc:0 ""
- law_laws:0 "State Laws"
- law_laws_desc:0 ""
+law_laws:0 "State Laws"
+law_laws_desc:0 ""
+ law_country_constitution:0 "Constitution"
+ law_country_constitution_desc:0 ""
+  no_constitution:0 "No Constitution"
+  no_constitution_desc:0 ""
+  human_rights:0 "Human Rights"
+  human_rights_desc:0 ""
+  constitution_adopted:0 "Constitution Drafts"
+  constitution_adopted_desc:0 ""
+  limited_constitution:0 "Limited Consitution"
+  limited_constitution_desc:0 ""
+  sharia_constitution:0 "Sharia Constitution"
+  sharia_constitution_desc:0 ""
+  full_constitution:0 "Full Constitution"
+  full_constitution_desc:0 ""
+ law_country_heir:0 "Heir"
+  non_monarchical_system  
  law_court:0 "State Court"
  law_court_desc:0 ""
