--- a/localisation/laws_l_english.yml
+++ b/localisation/laws_l_english.yml
@@ -170,6 +170,28 @@ law_laws_desc:0 ""
   full_constitution:0 "Full Constitution"
   full_constitution_desc:0 ""
  law_country_heir:0 "Heir"
-  non_monarchical_system  
+  non_monarchical_system:0 "Non-Heriditary Succession"
+  non_monarchical_system_desc:0 ""
+  no_heir:0 "No Heir"
+  no_heir_desc:0 ""
+  weak_heir:0 "Weak Heir"
+  weak_heir_desc:0 ""
+  dethroned_heir:0 "Dethroned Heir"
+  dethroned_heir_desc:0 ""
+  has_heir:0 "Has Heir"
+  has_heir_desc:0 ""
+ law_country_suffrage:0 "Suffrage"
+ law_country_suffrage_desc:0 ""
+ law_country_borders:0 "Borders"
+ law_country_borders_desc:0 ""
+  no_borders:0 "[GetNationalNoBorderType] Borders"
+  no_borders_non_existant:0 "Non-Existant"
+  no_borders_undefined:0 "Undefined"
+  open_borders:0 "Open Borders"
+  open_borders_desc:0 ""
+  border_control:0 "Controlled Borders"
+  border_control_desc:0 ""
+  closed_borders:0 "Closed Borders"
+  closed_borders_desc:0 ""
  law_court:0 "State Court"
  law_court_desc:0 ""
