--- a/localisation/prestige_l_english.yml
+++ b/localisation/prestige_l_english.yml
@@ -8,7 +8,7 @@
  prestige_country_total_display_achievement:0 ":\n§YAchievement ([?ROOT.prestige_achievement])[§!\n Achievement   §G+[?ROOT.prestige_achievement]§!"
  prestige_country_total_display_science:0 "\n§YScience ([?ROOT.prestige_tech])§![GetNationalPrestigeTotalDisplayScienceInventions][GetNationalPrestigeTotalDisplayScienceTechnologies]"
  prestige_country_total_display_science_inventions:0 "\n Inventions   §G+[?ROOT.prestige_tech_inventions]§!"
- prestige_country_total_display_science_technologies:0 "\n Technologies   §G+[?ROOT.prestige_tech_research]"
+ prestige_country_total_display_science_technologies:0 "\n Technologies   §G+[?ROOT.prestige_tech_research]§!"
  prestige_country_total_display_economy:0 "\n§YEconomy ([?ROOT.prestige_economy])§![GetNationalPrestigeTotalDisplayEconomyFactories][GetNationalPrestigeTotalDisplayEconomyExports]"
  prestige_country_total_display_economy_factories:0 "\n Factories   §G+[?ROOT.prestige_economy_factories]§!"
  prestige_country_total_display_economy_exports:0 "\nExports   §G+[?ROOT.prestige_economy_exports]§!"
@@ -23,7 +23,7 @@
  prestige_country_total_display_military:0 "\n§YMilitary ([?ROOT.prestige_army])§![GetNationalPrestigeTotalDisplayMilitaryBattalions][GetNationalPrestigeTotalDisplayMilitaryShips][GetNationalPrestigeTotalDisplayMilitaryPlanes][GetNationalPrestigeTotalDisplayMilitaryEra][GetNationalPrestigeTotalDisplayMilitarySubjects][GetNationalPrestigeTotalDisplayMilitarySubject]"
  prestige_country_total_display_military_battalions:0 "\n Battalions   §G+[?ROOT.prestige_army_battalions]§!"
  prestige_country_total_display_military_ships:0 "\n Ships   §G+[?ROOT.prestige_army_ships]§!"
- prestige_country_total_display_military_planes0 "\n Planes   §G+[?ROOT.prestige_army_planes]§!"
+ prestige_country_total_display_military_planes:0 "\n Planes   §G+[?ROOT.prestige_army_planes]§!"
  prestige_country_total_display_military_era_nomadic:0 "\n Nomadic Warriors   §R-35%§!"
  prestige_country_total_display_military_era_levies:0 "\n Agrarian Levies   §R-20%§!"
  prestige_country_total_display_military_era_traditional:0 "\n Traditional Army   §R-7.5%§!"
