Main Menu and Subject Score

--- a/localisation/prestige_l_english.yml
+++ b/localisation/prestige_l_english.yml
@@ -12,15 +12,14 @@
  prestige_country_total_display_economy:0 "\n§YEconomy ([?ROOT.prestige_economy])§![GetNationalPrestigeTotalDisplayEconomyFactories][GetNationalPrestigeTotalDisplayEconomyExports]"
  prestige_country_total_display_economy_factories:0 "\n Factories   §G+[?ROOT.prestige_economy_factories]§!"
  prestige_country_total_display_economy_exports:0 "\nExports   §G+[?ROOT.prestige_economy_exports]§!"
- prestige_country_total_display_empire:0 "\n§YEmpire ([?ROOT.prestige_empire])§![GetNationalPrestigeTotalDisplayEmpireRank][GetNationalPrestigeTotalDisplayEmpireStates][GetNationalPrestigeTotalDisplayEmpireSubjects][GetNationalPrestigeTotalDisplayEmpireSubject]"
+ prestige_country_total_display_empire:0 "\n§YEmpire ([?ROOT.prestige_empire])§![GetNationalPrestigeTotalDisplayEmpireRank][GetNationalPrestigeTotalDisplayEmpireStates][GetNationalPrestigeTotalDisplayEmpireSubjects]"
  prestige_country_total_display_empire_rank_great:0 "\n Great Power   §G+25§!"
  prestige_country_total_display_empire_rank_secondary:0 "\n Secondary Power   §G+15§!"
  prestige_country_total_display_empire_rank_minor:0 "\n Minor Power   §G+10§!"
  prestige_country_total_display_empire_rank_irrelevant:0 "\n Irrelevant Power   §G+5§!"
  prestige_country_total_display_empire_states:0 "\n Controlled States   §G+[?ROOT.prestige_empire_states]§!"
- prestige_country_total_display_empire_subjects:0 "\n has Subjects   §G+[?ROOT.prestige_empire_subject]§!"
- prestige_country_total_display_empire_subject:0 "\n is Subjects   §R-50%§!"
- prestige_country_total_display_military:0 "\n§YMilitary ([?ROOT.prestige_army])§![GetNationalPrestigeTotalDisplayMilitaryBattalions][GetNationalPrestigeTotalDisplayMilitaryShips][GetNationalPrestigeTotalDisplayMilitaryPlanes][GetNationalPrestigeTotalDisplayMilitaryEra][GetNationalPrestigeTotalDisplayMilitarySubjects][GetNationalPrestigeTotalDisplayMilitarySubject]"
+ prestige_country_total_display_empire_subject:0 "\n has Subjects   §G+[?ROOT.prestige_empire_subject]§!"
+ prestige_country_total_display_military:0 "\n§YMilitary ([?ROOT.prestige_army])§![GetNationalPrestigeTotalDisplayMilitaryBattalions][GetNationalPrestigeTotalDisplayMilitaryShips][GetNationalPrestigeTotalDisplayMilitaryPlanes][GetNationalPrestigeTotalDisplayMilitaryEra][GetNationalPrestigeTotalDisplayMilitarySubject]"
  prestige_country_total_display_military_battalions:0 "\n Battalions   §G+[?ROOT.prestige_army_battalions]§!"
  prestige_country_total_display_military_ships:0 "\n Ships   §G+[?ROOT.prestige_army_ships]§!"
  prestige_country_total_display_military_planes:0 "\n Planes   §G+[?ROOT.prestige_army_planes]§!"
@@ -28,5 +27,5 @@
  prestige_country_total_display_military_era_levies:0 "\n Agrarian Levies   §R-20%§!"
  prestige_country_total_display_military_era_traditional:0 "\n Traditional Army   §R-7.5%§!"
  prestige_country_total_display_military_era_modern:0 "\n Modern Army   §G+15%§!"
- prestige_country_total_display_military_subjects:0 "\n has Subjects   §G+[?ROOT.prestige_army_subject]§!"
- prestige_country_total_display_military_subject:0 "\n is Subjects   §R-50%§!"
+ prestige_country_total_display_military_subject:0 "\n has Subjects   §G+[?ROOT.prestige_military_subject]§!"
+ prestige_country_total_display_subject:0 "\n§YAutonomy§!\n Is Subject   §R-70%§!"
