--- a/localisation/laws_defines_l_english.yml
+++ b/localisation/laws_defines_l_english.yml
@@ -38,9 +38,9 @@
    law_country_religion_druze:0 "Druze"
    law_country_religion_druze_desc:0 ""
    law_country_religion_druze_trigger_tt:0 " Majority Religion is §YDruze§!"
-   law_country_religion_waaqist:0 "Waaqist"
+   law_country_religion_waaqist:0 "Waaqeffannaa"
    law_country_religion_waaqist_desc:0 ""
-   law_country_religion_waaqist_trigger_tt:0 " Majority Religion is §YWaaqist§!"
+   law_country_religion_waaqist_trigger_tt:0 " Majority Religion is §YWaaqeffanna§!"
    law_country_religion_catholic:0 "Catholic"
    law_country_religion_catholic_desc:0 ""
    law_country_religion_catholic_trigger_tt:0 " Majority Religion is §YCatholic§!"
