--- a/localisation/laws_defines_l_english.yml
+++ b/localisation/laws_defines_l_english.yml
@@ -26,7 +26,22 @@
    law_country_religion_ancestorship:0 "Ancestorship"
    law_country_religion_ancestorship_desc:0 ""
    law_country_religion_ancestorship_trigger_tt:0 " Majority Religion is §YAncestorship§!"
-   law_country_religion_mossi:0 "Fetishist"
+   law_country_religion_serer:0 "Serer"
+   law_country_religion_serer_desc:0 ""
+   law_country_religion_serer_trigger_tt:0 " Majority Religion is §YSerer§!"
+   law_country_religion_vodun:0 "Vodun"
+   law_country_religion_vodun_desc:0 ""
+   law_country_religion_vodun_trigger_tt:0 " Majority Religion is §YVodun§!"
+   law_country_religion_akom:0 "Akom"
+   law_country_religion_akom_desc:0 ""
+   law_country_religion_akom_trigger_tt:0 " Majority Religion is §YAkom§!"
+   law_country_religion_isese:0 "Ìṣẹ̀ṣe"
+   law_country_religion_isese_desc:0 ""
+   law_country_religion_isese_trigger_tt:0 " Majority Religion is §YÌṣẹ̀ṣe§!"
+   law_country_religion_odinala:0 "Ọdịnala"
+   law_country_religion_odinala_desc:0 ""
+   law_country_religion_odinala_trigger_tt:0 " Majority Religion is §YỌdịnala§!"
+   law_country_religion_mossi:0 "Mossi"
    law_country_religion_mossi_desc:0 ""
    law_country_religion_mossi_trigger_tt:0 " Majority Religion is §YMossi§!"
    law_country_religion_zoroastrian:0 "Zoroastrian"
@@ -39,8 +54,8 @@
    law_country_religion_druze_desc:0 ""
    law_country_religion_druze_trigger_tt:0 " Majority Religion is §YDruze§!"
    law_country_religion_waaqist:0 "Waaqeffannaa"
-   law_country_religion_waaqist_desc:0 ""
-   law_country_religion_waaqist_trigger_tt:0 " Majority Religion is §YWaaqeffanna§!"
+   law_country_religion_waaqeffannaa_desc:0 ""
+   law_country_religion_waaqeffannaa_trigger_tt:0 " Majority Religion is §YWaaqeffanna§!"
    law_country_religion_catholic:0 "Catholic"
    law_country_religion_catholic_desc:0 ""
    law_country_religion_catholic_trigger_tt:0 " Majority Religion is §YCatholic§!"
@@ -70,12 +85,6 @@
    law_country_religion_ibadi:0 "Ibadi"
    law_country_religion_ibadi_desc:0 ""
    law_country_religion_ibadi_trigger_tt:0 " Majority Religion is §YIbadi§!"
-   law_country_religion_cult_of_personality:0 "Cult of Personality"
-   law_country_religion_cult_of_personality_desc:0 ""
-   law_country_religion_cult_of_personality_trigger_tt:0 " Majority Religion is §YCult of Personality§!"
-   law_country_religion_vodun:0 "Vodun"
-   law_country_religion_vodun_desc:0 ""
-   law_country_religion_vodun_trigger_tt:0 " Majority Religion is §YVodun§!"
    law_country_religion_atheist:0 "Atheist"
    law_country_religion_atheist_desc:0 ""
    law_country_religion_atheist_trigger_tt:0 " Majority Religion is §YAtheist§!"
@@ -153,45 +162,3 @@
    law_country_military_line_desc:0 ""
    law_country_military_modern:0 "Modern Army"
    law_country_military_modern_desc:0 ""
-law_laws:0 "State Laws"
-law_laws_desc:0 ""
- law_country_constitution:0 "Constitution"
- law_country_constitution_desc:0 ""
-  no_constitution:0 "No Constitution"
-  no_constitution_desc:0 ""
-  human_rights:0 "Human Rights"
-  human_rights_desc:0 ""
-  constitution_adopted:0 "Constitution Drafts"
-  constitution_adopted_desc:0 ""
-  limited_constitution:0 "Limited Consitution"
-  limited_constitution_desc:0 ""
-  sharia_constitution:0 "Sharia Constitution"
-  sharia_constitution_desc:0 ""
-  full_constitution:0 "Full Constitution"
-  full_constitution_desc:0 ""
- law_country_heir:0 "Heir"
-  non_monarchical_system:0 "Non-Heriditary Succession"
-  non_monarchical_system_desc:0 ""
-  no_heir:0 "No Heir"
-  no_heir_desc:0 ""
-  weak_heir:0 "Weak Heir"
-  weak_heir_desc:0 ""
-  dethroned_heir:0 "Dethroned Heir"
-  dethroned_heir_desc:0 ""
-  has_heir:0 "Has Heir"
-  has_heir_desc:0 ""
- law_country_suffrage:0 "Suffrage"
- law_country_suffrage_desc:0 ""
- law_country_borders:0 "Borders"
- law_country_borders_desc:0 ""
-  no_borders:0 "[GetNationalNoBorderType] Borders"
-  no_borders_non_existant:0 "Non-Existant"
-  no_borders_undefined:0 "Undefined"
-  open_borders:0 "Open Borders"
-  open_borders_desc:0 ""
-  border_control:0 "Controlled Borders"
-  border_control_desc:0 ""
-  closed_borders:0 "Closed Borders"
-  closed_borders_desc:0 ""
- law_court:0 "State Court"
- law_court_desc:0 ""
