--- a/localisation/law_status_l_english.yml
+++ b/localisation/law_status_l_english.yml
@@ -35,10 +35,10 @@
   disencouraged_growth_desc:0 ""
  law_country_centralization:0 "Centralization"
  law_country_centralization_desc:0 ""
-  law_country_centralization_expanding_administration:0 "Expanding Administration"
-  law_country_centralization_expanding_administration_desc:0 ""
-  law_country_centralization_stable:0 "Stable Administration"
+  law_country_centralization_centralization:0 "Centralizating"
+  law_country_centralization_centralization_desc:0 ""
+  law_country_centralization_stable:0 "Stable"
   law_country_centralization_stable_desc:0 ""
-  law_country_centralization_decentralization:0 "Overextended Administration"
+  law_country_centralization_decentralization:0 "Decentralizing"
   law_country_centralization_decentralization_desc:0 ""
-  law_country_centralization_rapid_decentralization:0 "Drastically Overextended Administration"
+  law_country_centralization_rapid_decentralization:0 "Rapid Decentralizating"
