--- a/localisation/laws_defines_l_english.yml
+++ b/localisation/laws_defines_l_english.yml
@@ -35,12 +35,12 @@
    law_country_religion_akom:0 "Akom"
    law_country_religion_akom_desc:0 ""
    law_country_religion_akom_trigger_tt:0 " Majority Religion is §YAkom§!"
-   law_country_religion_isese:0 "Ìṣẹ̀ṣe"
+   law_country_religion_isese:0 "Isese"
    law_country_religion_isese_desc:0 ""
-   law_country_religion_isese_trigger_tt:0 " Majority Religion is §YÌṣẹ̀ṣe§!"
-   law_country_religion_odinala:0 "Ọdịnala"
+   law_country_religion_isese_trigger_tt:0 " Majority Religion is §YIsese§!"
+   law_country_religion_odinala:0 "Odinala"
    law_country_religion_odinala_desc:0 ""
-   law_country_religion_odinala_trigger_tt:0 " Majority Religion is §YỌdịnala§!"
+   law_country_religion_odinala_trigger_tt:0 " Majority Religion is §YOdinala§!"
    law_country_religion_mossi:0 "Mossi"
    law_country_religion_mossi_desc:0 ""
    law_country_religion_mossi_trigger_tt:0 " Majority Religion is §YMossi§!"
