--- a/localisation/_RCE_edc_africa_l_english.yml
+++ b/localisation/_RCE_edc_africa_l_english.yml
@@ -273,8 +273,6 @@
  afr_simple_telegraph_network_2:0 "Simple Telegraph Network"
  afr_capital_is_in_europe:0 "Capital is in §YEurope§!"
  afr_cocoa_growing:0 "Cocoa Growing"
- afr_reforming_kingdom:0 "Reforming Regional Power"
- afr_large_kingdom:0 "Regional Power"
  EDC_berlin_con.2.a:0 "Support the selected candidate"
  EDC_berlin_con.2.b:0 "Why should we care about this region?"
  EDC_berlin_con.9.t:0 "The [afr_berlin_conference_host.GetName] Conference"
@@ -796,7 +794,7 @@
  ofs_vic_encorage_immirgration_desc:0 "In order to increase our population our advisors have suggested that we implement policies to encourage more Immigration into our country"
  ofs_vic_create_a_national_tax_code:0 "Create a National Tax Code"
  ofs_vic_create_a_national_tax_code_desc:0 "Our economy is completely unbalanced and unregulated, we should establish a proper tax code to stablise our nation and its economy"
- autonomy_khedive:0 "Khedivate"
+ autonomy_ottoman_khedive:0 "Khedivate"
  autonomy_ottoman_eyalet:0 "Eyalet"
  egy_sudan_slave_raids:0 "Sudanese Slave Raids"
  EGY_Otto_may_disaprove:0 "§R[OTO.GetNameDef] may intercede§!"
