--- a/localisation/law_politics_l_english.yml
+++ b/localisation/law_politics_l_english.yml
@@ -29,13 +29,18 @@
    has_heir_desc:0 ""
   law_country_suffrage:0 "Suffrage"
   law_country_suffrage_desc:0 ""
-   free_elections:0 "Free Elections"
-   free_elections_desc:0 ""
-   limited_elections:0 "Limited Elections"
-   limited_elections_desc:0 ""
-   one_party_elections:0 "One Party Elections"
-   one_party_elections_desc:0 ""
-   no_elections:0 "No Elections"
+   universal_suffrage:0 "Universal Suffrage"
+   universal_suffrage_desc:0 ""
+   universal_male_suffrage:0 "Male Suffrage"
+   universal_male_suffrage_desc:0 ""
+   parliamentary_suffrage:0 "Parlaimentary Suffrage"
+   parliamentary_suffrage_desc:0 ""
+   property_owners_suffrage:0 "Property Owner Suffrage"
+   property_owners_suffrage_desc:0 ""
+   oligarchism:0 "Oligarchism"
+   oligarchism_desc:0 ""
+   absolutism:0 "Absolutism"
+   absolutism_desc:0 ""
   law_country_borders:0 "Border"
   law_country_borders_desc:0 ""
    no_borders:0 "No Border"
@@ -87,3 +92,32 @@
    low_taxes_desc:0 ""
    very_low_taxes:0 "Very Low Taxes"
    very_low_taxes_desc:0 ""
+  law_country_property:0 "Property Law"
+  law_country_property_desc:0 ""
+   lp_serfdom:0 "Serfdom"
+   lp_serfdom_desc:0 ""
+   lp_land_estates:0 "Land Estates"
+   lp_land_estates_desc:0 ""
+   lp_land_purchase:0 "Land Purchase"
+   lp_land_purchase_desc:0 ""
+   lp_peasant_holdings:0 "Peasant Holdings"
+   lp_peasant_holdings_desc:0 ""
+   lp_collectivization:0 "Collectivization"
+   lp_collectivization_desc:0 ""
+   lp_african_communalism:0 "Traditional Communalism"
+   lp_african_communalism_desc:0 ""
+  law_country_mobilization:0 "Mobilization Law"
+  law_country_mobilization_desc:0 ""
+   manpower_industrial:0 "Conscription"
+   manpower_industrial_desc:0 ""
+   manpower_tribal_everyone:0 "Nationalized Levies"
+   manpower_tribal_everyone_desc:0 ""
+   manpower_tribal_every_tenth:0 "Expansive Levies"
+   manpower_tribal_every_tenth_desc:0 ""
+   manpower_tribal_every_fifth:0 "Large Levies"
+   manpower_tribal_every_fifth_desc:0 ""
+   manpower_tribal_warriors:0 "Levies"
+   manpower_tribal_warriors_desc:0 ""
+   manpower_disarmed:0 "Disarmed"
+  law_country_foreign_partnership_british
+
