--- a/localisation/law_status_l_english.yml
+++ b/localisation/law_status_l_english.yml
@@ -5,14 +5,14 @@
   law_country_industrialization_desc:0 ""
    agrarian:0 "Agrarian"
    agrarian_desc:0 ""
-   industrializing:0 "Developing"
+   industrializing:0 "Industrializing"
    industrializing_desc:0 ""
    industrialized:0 "Industrial"
    industrialized_desc:0 ""
-   electrification:0 "Electrified"
+   electrification:0 "Electrifying"
    electrification_desc:0 ""
-   mass_production:0 "Mechanized"
-   mass_production_desc:0 ""
+   electrified:0 "Electrified"
+   electrified_desc:0 ""
   law_country_prosperity:0 "Prosperity"
   law_country_prosperity_desc:0 ""
    law_country_prosperity_very_prosperous:0 "Very Prosperous"
