--- a/localisation/laws_defines_l_english.yml
+++ b/localisation/laws_defines_l_english.yml
@@ -109,9 +109,9 @@
    law_country_culture_albanian_desc:0 ""
   law_country_government:0 "State Government"
   law_country_government_desc:0 ""
-   law_country_government_nomadic:0 "Unorganized Nomads"
+   law_country_government_nomadic:0 "Decentralized Nomads"
    law_country_government_nomadic_desc:0 ""
-   law_country_government_tribe:0 "Unorganized Tribes"
+   law_country_government_tribe:0 "Decentralized Tribes"
    law_country_government_tribe_desc:0 ""
    law_country_government_chiefdom:0 "Chiefdom"
    law_country_government_chiefdom_desc:0 ""
@@ -129,7 +129,7 @@
    law_country_government_sultanate_desc:0 ""
    law_country_government_merchantile_oligarchy:0 "Mercantile Oligarchy"
    law_country_government_merchantile_oligarchy_desc:0 ""
-   law_country_government_religious_order:0 "[GetStateReligion] Order"
+   law_country_government_religious_order:0 "[GetNationalOfficialReligion] Order"
    law_country_government_religious_order_desc:0 ""
    law_country_government_landed_republic:0 "Landed Republic"
    law_country_government_landed_republic_desc:0 ""
@@ -140,16 +140,34 @@
    law_country_government_colonial_company:0 "[ROOT.GetColonialOverlordAdjective] Colonial Company"
   law_country_society:0 "State Society"
   law_country_society_desc:0 ""
-   law_country_society_nomadic:0 "Trading Herders"
-   law_country_society_nomadic_desc:0 ""
-   law_country_society_tribal:0 "Communal Tribal"
-   law_country_society_tribal_desc:0 ""
-   law_country_society_feudal:0 "Communal Feudal"
-   law_country_society_feudal_desc:0 ""
-   law_country_society_state:0 "Organized State"
-   law_country_society_state_desc:0 ""
-   law_country_society_federation:0 "Organized Federation"
-   law_country_society_federation_desc:0 ""
+   AF_T_nomadic_tribal_nation:0 "Nomadic Tribal State"
+   AF_T_nomadic_tribal_nation_desc:0 ""
+   AF_T_unorganized_tribal_nation:0 "Unestablished Tribal Communities"
+   AF_T_unorganized_tribal_nation_desc:0 ""
+   AF_T_unorganized_tribal_nation_2:0 "Established Tribal Communities"
+   AF_T_unorganized_tribal_nation_2_desc:0 ""
+   AF_T_unorganized_tribal_nation_3:0 "Developing Tribal Communities"
+   AF_T_unorganized_tribal_nation_3_desc:0 ""
+   AF_T_unorganized_tribal_nation_4:0 "Developed Communities"
+   AF_T_unorganized_tribal_nation_4_desc:0 ""
+   AF_T_unorganized_tribal_nation_5:0 "Reforming Tribal Communities"
+   AF_T_unorganized_tribal_nation_5_desc:0 ""
+   AF_T_organized_tribal_nation:0 "Developing Tribal State"
+   AF_T_organized_tribal_nation_desc:0 ""
+   AF_T_organized_tribal_nation_2:0 "Developed State"
+   AF_T_organized_tribal_nation_2_desc:0 ""
+   AF_T_organized_tribal_nation_3:0 "Reforming Tribal State"
+   AF_T_organized_tribal_nation_3_desc:0 ""
+   AF_T_small_kingdom:0 "Developing Kingdom"
+   AF_T_small_kingdom_desc:0 ""
+   afr_large_kingdom:0 "Developed Kingdom"
+   afr_large_kingdom_desc:0 ""
+   afr_reforming_kingdom:0 "Reforming Kingdom"
+   afr_reforming_kingdom_desc:0 ""
+   law_country_society_victorian:0 "Nation-State"
+   law_country_society_victorian_desc:0 ""
+   law_country_society_modern:0 "Modern Nation-State"
+   law_country_society_modern_desc:0 ""
   law_country_military:0 "State Military"
   law_country_military_desc:0 ""
    law_country_military_nomadic_warriors:0 "Tribal Warrior"
