Bug Fixes, Law Finalizations & Adamawa Laws?

--- a/localisation/law_politics_l_english.yml
+++ b/localisation/law_politics_l_english.yml
@@ -1,6 +1,10 @@
 ﻿l_english:
- law_country_politics:0 "Politics"
+ law_country_politics:0 "State Politics"
  law_country_politics_desc:0 ""
+ law_country_economy:0 "State Economy"
+ law_country_economy_desc:0 ""
+ law_country_court:0 "State Court"
+ law_country_court_desc:0 ""
   law_country_constitution:0 "Constitution"
   law_country_constitution_desc:0 ""
    no_constitution:0 "No Constitution"
@@ -112,10 +116,10 @@
    manpower_industrial_desc:0 ""
    manpower_tribal_everyone:0 "Nationalized Levies"
    manpower_tribal_everyone_desc:0 ""
-   manpower_tribal_every_tenth:0 "Expansive Levies"
-   manpower_tribal_every_tenth_desc:0 ""
-   manpower_tribal_every_fifth:0 "Large Levies"
+   manpower_tribal_every_fifth:0 "Expansive Levies"
    manpower_tribal_every_fifth_desc:0 ""
+   manpower_tribal_every_tenth:0 "Large Levies"
+   manpower_tribal_every_tenth_desc:0 ""
    manpower_tribal_warriors:0 "Levies"
    manpower_tribal_warriors_desc:0 ""
    manpower_disarmed:0 "Disarmed"
