--- a/localisation/law_status_l_english.yml
+++ b/localisation/law_status_l_english.yml
@@ -21,9 +21,9 @@
    law_country_prosperity_prosperous_desc:0 ""
    law_country_prosperity_stable:0 "Stable"
    law_country_prosperity_stable_desc:0 ""
-   law_country_prosperity_devastated:0 "Devasted"
+   law_country_prosperity_devastated:0 "Devastated"
    law_country_prosperity_devastated_desc:0 ""
-   law_country_prosperity_very_devastated:0 "Very Devasted"
+   law_country_prosperity_very_devastated:0 "Very Devastated"
    law_country_prosperity_very_devastated_desc:0 ""
   law_country_population:0 "Population"
   law_country_population_desc:0 ""
@@ -42,3 +42,7 @@
   law_country_centralization_decentralization:0 "Decentralizing"
   law_country_centralization_decentralization_desc:0 ""
   law_country_centralization_rapid_decentralization:0 "Rapid Decentralizating"
+ law_country_army:0 "Reserves"
+ law_country_army_desc:0 ""
+  law_country_army_reserves:0 "Modern Reserves"
+  law_country_army_reserves_desc:0 ""
