--- a/localisation/laws_defines_l_english.yml
+++ b/localisation/laws_defines_l_english.yml
@@ -170,10 +170,12 @@
    law_country_society_modern_desc:0 ""
   law_country_military:0 "State Military"
   law_country_military_desc:0 ""
-   law_army_tribal_basic:0 "Tribal Warrior"
+   law_army_tribal_basic:0 "Tribal Warriors"
    law_army_tribal_basic_desc:0 ""
-   law_army_tribal_improved:0 "Feudal Levy"
+   law_army_tribal_improved:0 "Primitive Levy"
    law_army_tribal_improved_desc:0 ""
+   law_army_tribal_advanced:0 "Feudal Levy"
+   law_army_tribal_advanced_desc:0 ""
    law_country_military_traditional:0 "Traditional Army"
    law_country_military_traditional_desc:0 ""
    law_country_military_line:0 "Victorian Army"
