--- a/localisation/cosmetics_l_english.yml
+++ b/localisation/cosmetics_l_english.yml
@@ -8,6 +8,6 @@
  GER_prussia_cosmetic_reformism_DEF:0 "the Republic of Prussia"
  GER_prussia_cosmetic_ADJ:0 "Prussian"
 
- ITA_sardinia_piedmont:0 "Sardinia Piedmont"
- ITA_sardinia_piedmont_DEF:0 "the Kingdom of Sardinia Piedmont"
- ITA_sardinia_piedmont_ADJ:0 "Piedmontese"
+ ITA_sardinia_piedmont_cosmetic:0 "Sardinia Piedmont"
+ ITA_sardinia_piedmont_cosmetic_DEF:0 "the Kingdom of Sardinia Piedmont"
+ ITA_sardinia_piedmont_cosmetic_ADJ:0 "Piedmontese"
