--- a/localisation/laws_defines_l_english.yml
+++ b/localisation/laws_defines_l_english.yml
@@ -133,6 +133,12 @@
    law_country_government_religious_order_desc:0 ""
    law_country_government_landed_republic:0 "Landed Republic"
    law_country_government_landed_republic_desc:0 ""
+   law_country_government_elective_monarchy:0 "Elective Monarchy"
+   law_country_government_elective_monarchy_desc:0 "§CUnique Government Type§!"
+   law_country_government_parliamentary_monarchy:0 "Parliamentary Monarchy"
+   law_country_government_parliamentary_monarchy_desc:0 ""
+   law_country_government_executive_republic:0 "Executive Republic"
+   law_country_government_executive_republic_desc:0 ""
    law_country_government_democratic_republic:0 "Democratic Republic"
    law_country_government_democratic_republic_desc:0 ""
    law_country_government_caliphate:0 "Caliphate"
