--- a/localisation/core_l_english.yml
+++ b/localisation/core_l_english.yml
@@ -314,7 +314,7 @@
  MENU_BAR_LOAD:0 "Load"
  MENU_BAR_QUIT:0 "Exit Game"
  MENU_BAR_SAVE_GAME:0 "Save Game"
- MENU_BAR_GAME_OPTIONS:0 "Game Options"
+ MENU_BAR_GAME_OPTIONS:0 "Settings"
  MENU_BAR_GAME_WIKI:0 "Hearts of Iron Wiki"
  MENU_BAR_GAME_RESIGN:0 "Exit to Menu"
  MENU_BAR_MESSAGE_SETTINGS:0 "Messages"
