More Country Localisation

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1051,6 +1051,165 @@
  KRU:0 "Kru"
  KRU_DEF:0 "Kru"
  KRU_ADJ:0 "Kru"
+
+ LIB:0 "Liberia"
+ LIB_DEF:0 "Liberia"
+ LIB_ADJ:0 "Liberian"
+
+ MND:0 "Mande"
+ MND_DEF:0 "Mande"
+ MND_ADJ:0 "Mande"
+
+ MNH:0 "Manneh"
+ MNH_DEF:0 "Manneh"
+ MNH_ADJ:0 "Manneh"
+
+ SIE:0 "Sierra Leone"
+ SIE_DEF:0 "Sierra Leone"
+ SIE_ADJ:0 "Sierra Leonean"
+
+ SOS:0 "Soso"
+ SOS_DEF:0 "Soso"
+ SOS_ADJ:0 "Soso"
+
+ TOU:0 "Toucouleur"
+ TOU_DEF:0 "Toucouleur"
+ TOU_ADJ:0 "Toucouleur"
+
+ WAS:0 "Wassoulou"
+ WAS_DEF:0 "Wassoulou"
+ WAS_ADJ:0 "Wassoulou
+
+# Sassandra
+ AKA:0 "Akan"
+ AKA_DEF:0 "Akan"
+ AKA_ADJ:0 "Akan"
+
+ GBS:0 "Grand Bassam"
+ GBS_DEF:0 "Grand Bassam"
+ GBS_ADJ:0 "Bassam"
+
+ IVO:0 "Ivory Coast"
+ IVO_DEF:0 "Ivory Coast"
+ IVO_ADJ:0 "Sassandran"
+
+ KOG:0 "Kong"
+ KOG_DEF:0 "Kong"
+ KOG_ADJ:0 "Kong"
+
+# Volta
+ ASH:0 "Ashanti"
+ ASH_DEF:0 "Ashanti"
+ ASH_ADJ:0 "Ashanti"
+ DGB:0 "Dagbon"
+ DGB_DEF:0 "Dagbon"
+ DGB_ADJ:0 "Dagomba"
+ GDC:0 "Gold Coast"
+ GDC_DEF:0 "Gold Coast"
+ GDC_ADJ:0 "Voltan"
+ GHA:0 "Ghana"
+ GHA_DEF:0 "Ghana"
+ GHA_ADJ:0 "Ghanaian"
+ GNJ:0 "Gonja"
+ GNJ_DEF:0 "Gonja"
+ GNJ_ADJ:0 "Gonjan"
+ GRM:0 "Gurma"
+ GRM_DEF:0 "Gurma"
+ GRM_ADJ:0 "Gurmanese"
+ KTT:0 "Ketti"
+ KTT_DEF:0 "Ketti"
+ KTT_ADJ:0 "Ketti"
+ WAA:0 "Wa"
+ WAA_DEF:0 "Wa"
+ WAA_ADJ:0 "Wa"
+ TOG:0 "Togo"
+ TOG_DEF:0 "Togo"
+ TOG_ADJ:0 "Togo-Be"
+ BUE:0 "Bue"
+ BUE_DEF:0 "Bue"
+ BUE_ADJ:0 "Buen"
+ KDI:0 "Kandi"
+ KDI_DEF:0 "Kandi"
+ KDI_ADJ:0 "Kandien"
+ PKU:0 "Parakou"
+ PKU_DEF:0 "Parakou"
+ PKU_ADJ:0 "Parakoun"
+ NIK:0 "Nikki"
+ NIK_DEF:0 "Nikki"
+ NIK_ADJ:0 "Nikki"
+ DAH:0 "Dahomey"
+ DAH_DEF:0 "Dahomey"
+ DAH_ADJ:0 "Dahomean"
+ BEN:0 "Benin"
+ BEN_DEF:0 "Benin"
+ BEN_ADJ:0 "Beninese"
+ BID:0 "Bida"
+ BID_DEF:0 "Bida"
+ BID_ADJ:0 "Bida"
+ BRG:0 "Borgu"
+ BRG_DEF:0 "Borgu"
+ BRG_ADJ:0 "Borgu"
+ EGB:0 "Egba"
+ EGB_DEF:0 "Egba"
+ EGB_ADJ:0 "Egbanese"
+ EKT:0 "Ekiti"
+ EKT_DEF:0 "Ekiti"
+ EKT_ADJ:0 "Ekiti"
+ KTU:0 "Ketu"
+ KTU_DEF:0 "Ketu"
+ KTU_ADJ:0 "Ketuin"
+ IBA:0 "Ibadan"
+ IBA_DEF:0 "Ibadan"
+ IBA_ADJ:0 "Ibadan"
+ IJB:0 "Ijebu"
+ IJB_DEF:0 "Ijebu"
+ IJB_ADJ:0 "Ijebu"
+ IJE:0 "Ijesa"
+ IJE_DEF:0 "Ijesa"
+ IJE_ADJ:0 "Ijesa"
+ OYO:0 "Oyo"
+ OYO_DEF:0 "Oyo"
+ OYO_ADJ:0 "Oyo"
+ ADM:0 "Adamawa"
+ ADM_DEF:0 "Adamawa"
+ ADM_ADJ:0 "Adamawan"
+ ARO:0 "Aro"
+ ARO_DEF:0 "Aro"
+ ATO_ADJ:0 "Aro"
+ IGA:0 "Igala"
+ IGA_DEF:0 "Igala"
+ IGA_ADJ:0 "Igala"
+ IJW:0 "Ijaw"
+ IJW_DEF:0 "Ijaw"
+ IJW_ADJ:0 "Ijaw"
+ NRI:0 "Nri"
+ NRI_DEF:0 "Nri"
+ NRI_ADJ:0 "Nri"
+ CHA:0 "Chad"
+ CHA_DEF:0 "Chad"
+ CHA_ADJ:0 "Chadian"
+ DFR:0 "Darfur"
+ DFR_DEF:0 "Darfur"
+ DFR_ADJ:0 "Darfur"
+ DFK:0 "Dar al Kuti"
+ DFK_DEF:0 "Dar al Kuti"
+ DFK_ADJ:0 "Dar al Kuti"
+ DRG:0 "Dar Runga"
+ DRG_DEF:0 "Dar Runga"
+ DRG_ADJ:0 "Dar Runga"
+ KNM:0 "Kanem"
+ KNM_DEF:0 "Kanem"
+ KNM_ADJ:0 "Kanembu"
+ WDD:0 "Waddai"
+ WDD_DEF:0 "Waddai"
+ WDD_ADJ:0 "Waddai"
+ TOB:0 "Toubou"
+ TOB_DEF:0 "Toubou"
+ TOB_ADJ:0 "Toubou"
+ TUG:0 "Tuareg"
+ TUG_DEF:0 "Tuareg"
+ TUG_ADJ:0 "Tuareg"
+
 # Chad
  TOb:0 "Tibesti"
  TOB_DEF:0 "Tibesti"
