--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -559,7 +559,7 @@
  STATE_558:0 "West Bamum"
  STATE_559:0 "Banyo"
  STATE_560:0 "East Bamum"
- STATE_561:0 "Ngaoundere"
+ STATE_561:0 "Delbe"
  STATE_562:0 "Mayumba"
  STATE_563:0 "Sette"
  STATE_564:0 "Ayari"
