--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -378,7 +378,7 @@
  NJD_ADJ:0 "Saudi"
  NJD_fundamentalism:0 "Nejd"
  NJD_fundamentalism_DEF:0 "Nejdi Emirate"
- NJD_ADJ:0 "Nejdi"
+ NJD_fundamentalism_ADJ:0 "Nejdi"
  NJD_autonomy_ottoman_eyalet:0 "Nejdi Eyalet"
  NJD_autonomy_ottoman_eyalet_DEF:0 "the Eyalet of Nejd"
  NJD_autonomy_ottoman_eyalet_ADJ:0 "Nejdi"
@@ -694,7 +694,7 @@
  SNS_ADJ:0 "Senussii"
  SNS_fundamentalism:0 "Senussi Order"
  SNS_fundamentalism_DEF:0 "the Senussi Order"
- SNS_ADJ:0 "Senussii"
+ SNS_fundamentalism_ADJ:0 "Senussii"
  SNS_autonomy_ottoman_eyalet:0 "Senussi Eyalet"
  SNS_autonomy_ottoman_eyalet_DEF:0 "the Senussii Eyalet"
  SNS_autonomy_ottoman_eyalet_ADJ:0 "Senussii"
