--- a/localisation/english/law_politics_l_english.yml
+++ b/localisation/english/law_politics_l_english.yml
@@ -47,11 +47,14 @@
    absolutism_desc:0 ""
   law_country_borders:0 "Border"
   law_country_borders_desc:0 ""
-   no_borders:0 "No Border"
-   no_borders_desc:0 ""
-   open_borders:0 "Open Border"
+   no_borders:0 "[GetNationalNoBorderType] Borders"
+   no_borders_non_existant:0 "Non-Existant"
+   no_borders_undefined:0 "Undefined"
+   open_borders:0 "[GetNationalNoBorderType]"
    open_borders_desc:0 ""
-   border_control:0 "Controlled Border"
+   no_borders_non_existant:0 "Non-Existant"
+   no_borders_undefined:0 "Undefined"
+   border_control:0 "Controlled Borders"
    border_control_desc:0 ""
    closed_borders:0 "Closed Border"
    closed_borders_desc:0 ""
